%%{init: {'theme':'base', 'themeVariables': { 'primaryColor':'#e8f4f8', 'primaryTextColor':'#2c3e50', 'primaryBorderColor':'#3498db', 'lineColor':'#3498db', 'secondaryColor':'#f0f9ff', 'tertiaryColor':'#e0f2fe', 'noteBkgColor':'#fff7ed', 'noteTextColor':'#2c3e50', 'noteBorderColor':'#f59e0b', 'activationBkgColor':'#dbeafe', 'activationBorderColor':'#3b82f6'}}}%%
%% Pattern Interaction: Command + Template Method + Strategy + Memento
classDiagram
    %% Command Pattern
    class Command {
        <<interface>>
        +execute()
        +undo()
        +redo()
        +getDescription()
        +canUndo()
        +serialize()
    }
    class CommandManager {
        -undoStack: Command[]
        -redoStack: Command[]
        +execute(command: Command)
        +undo()
        +redo()
    }
    class BaseCommand {
        <<abstract>>
        #executed: boolean
        +execute() template method
        +undo() template method
        +redo() template method
        #doExecute() hook
        #doUndo() hook
    }
    class RestoreVersionCommand {
        -versionService: VersionService
        +doExecute()
        +doUndo()
    }
    %% Strategy Pattern
    class IRetentionStrategy {
        <<interface>>
        +filterVersionsToKeep()
        +getName()
    }
    class KeepRecentVersionsStrategy {
        +filterVersionsToKeep()
        +getName()
    }
    class TimeBasedRetentionStrategy {
        +filterVersionsToKeep()
        +getName()
    }
    class TaggedVersionsStrategy {
        +filterVersionsToKeep()
        +getName()
    }
    class VersionRetentionManager {
        -fileSystemService: FileSystemService
        -strategy: IRetentionStrategy
        +setStrategy(strategy)
        +applyRetentionPolicy()
    }
    %% Memento Pattern
    class VersionService {
        <<interface>>
        <<frontend>>
        +listFileVersions()
        +getFileVersion()
        +restoreFileVersion()
        +getCurrentFileContent()
    }
    class FileSystemService {
        <<backend>>
        +listFileVersions()
        +getFileVersion()
        +restoreFileVersion()
        +deleteFileVersion()
    }
    class MinIOVersion {
        <<Memento>>
        <<immutable>>
        +versionId
        +content
        +lastModified
    }
    %% Relationships - Command Pattern
    Command <|.. BaseCommand : implements
    BaseCommand <|-- RestoreVersionCommand : extends
    CommandManager o-- Command : manages
    RestoreVersionCommand ..> VersionService : uses
    %% Relationships - Strategy Pattern
    VersionRetentionManager o-- IRetentionStrategy : uses
    VersionRetentionManager ..> FileSystemService : uses
    IRetentionStrategy <|.. KeepRecentVersionsStrategy : implements
    IRetentionStrategy <|.. TimeBasedRetentionStrategy : implements
    IRetentionStrategy <|.. TaggedVersionsStrategy : implements
    %% Relationships - Memento Pattern
    VersionService ..> FileSystemService : HTTP/REST API
    FileSystemService ..> MinIOVersion : creates/manages

